--- a/styles/main.css
+++ b/styles/main.css
@@ -11,7 +11,7 @@
 }
 
 .game-panel {
-  background-image: url('../images/background2.png');
+  background-image: url('../images/background.png');
   position: absolute;
   top: 30%;
   width: 100%;
