--- a/views/main.html
+++ b/views/main.html
@@ -28,10 +28,18 @@
 
 <div class="game-panel">
   <span class="pull-right" style="width: 80%;">
-    <button id="btn0" class="option-button" ng-disabled="!available" ng-click="post('0');">1</button>
-    <button id="btn1" class="option-button" ng-disabled="!available" ng-click="post('1');">2</button>
-    <button id="btn2" class="option-button" ng-disabled="!available" ng-click="post('2');">3</button>
-    <button id="btn3" class="option-button" ng-disabled="!available" ng-click="post('3');">4</button>
+    <button id="btn0" class="option-button" ng-disabled="!available" ng-click="post('0');">
+      <img src="../images/bomb.png" alt=""/>
+    </button>
+    <button id="btn1" class="option-button" ng-disabled="!available" ng-click="post('1');">
+      <img src="../images/bomb.png" alt=""/>
+    </button>
+    <button id="btn2" class="option-button" ng-disabled="!available" ng-click="post('2');">
+      <img src="../images/bomb.png" alt=""/>
+    </button>
+    <button id="btn3" class="option-button" ng-disabled="!available" ng-click="post('3');">
+      <img src="../images/bomb.png" alt=""/>
+    </button>
   </span>
   <img src="../images/bird-and-pipes.png" class="bird" alt=""/>
 </div>
