--- a/views/main.html
+++ b/views/main.html
@@ -8,7 +8,7 @@
 <!--</div>-->
 
 <div class="">
-  <div style="width: 100%; padding: 20px" class="row">
+  <div style="width: 100%; padding: 1em" class="row">
     <span class="counter" ng-class="{blue: available}" style="margin-left: 5%">
       {{countDown}}
     </span>
