--- a/views/main.html
+++ b/views/main.html
@@ -44,6 +44,7 @@
   <img src="../images/bird-and-pipes.png" class="bird" alt=""/>
 </div>
 
-<div class="footer text-center" style="position: absolute; bottom: 0px; background-color: #5c4f04; width: 100%;">
-  <p>♥ from the POLY Founders</p>
+<div class="footer text-center"
+     style="position: absolute; bottom: 0px; background-color: #bf7130; width: 100%; color: #4E2E2E">
+  <p>♥ from Poly Founders</p>
 </div>
